istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: "/hello"
    route:
    - destination:
        host: webserver-hello-svc
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/rest"
    route:
    - destination:
        host: webserver-rest-svc
        port:
          number: 8081
